Except copyright configuration in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,6 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 
 # End of https://www.gitignore.io/api/java,maven,intellij+all
+
+# Copyright configuration
+!.idea/copyright/
