--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
                 <version>${version.netty}</version>
             </dependency>
             <dependency>
+                <groupId>net.md-5</groupId>
+                <artifactId>bungeecord-chat</artifactId>
+                <version>1.13-SNAPSHOT</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>18.0</version>
