Depend on `lombok` and `annotations` in `protocol`

--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -45,5 +45,15 @@
             <groupId>com.mojang</groupId>
             <artifactId>authlib</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+        </dependency>
     </dependencies>
 </project>
