--- a/protocol/pom.xml
+++ b/protocol/pom.xml
@@ -55,5 +55,11 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.16.Final</version>
+        </dependency>
     </dependencies>
 </project>
