--- a/eventbus/pom.xml
+++ b/eventbus/pom.xml
@@ -25,5 +25,11 @@
 
     <artifactId>feathercore-eventbus</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
