Resolve compilation bug cleaning up sources

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,10 @@
         </repository>
     </repositories>
 
+    <build>
+        <defaultGoal>verify install</defaultGoal>
+    </build>
+
     <dependencyManagement>
         <dependencies>
             <!-- Own components -->
