--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -40,5 +40,9 @@
             <groupId>org.jetbrains</groupId>
             <artifactId>annotations</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.md-5</groupId>
+            <artifactId>bungeecord-chat</artifactId>
+        </dependency>
     </dependencies>
 </project>
