--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,11 @@
                 <artifactId>authlib</artifactId>
                 <version>1.5.21</version>
             </dependency>
+            <dependency>
+                <groupId>it.unimi.dsi</groupId>
+                <artifactId>fastutil</artifactId>
+                <version>8.2.2</version>
+            </dependency>
             <!-- Code generation and flow analysis -->
             <dependency>
                 <groupId>org.projectlombok</groupId>
