Initial items support, rename some stuff

--- a/shared/pom.xml
+++ b/shared/pom.xml
@@ -50,5 +50,10 @@
             <groupId>it.unimi.dsi</groupId>
             <artifactId>fastutil</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+        </dependency>
     </dependencies>
 </project>
