--- a/module-api/pom.xml
+++ b/module-api/pom.xml
@@ -25,5 +25,10 @@
 
     <artifactId>feathercore-module-api</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 </project>
