--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <maven.compiler.source>1.8</maven.compiler.source>
         <version.netty>4.1.43.Final</version.netty>
+        <version.padla>1.0-SNAPSHOT</version.padla>
         <!-- Testing -->
         <version.junit>5.5.2</version.junit>
         <version.junit.platform>1.5.2</version.junit.platform>
