--- a/eventbus/pom.xml
+++ b/eventbus/pom.xml
@@ -27,6 +27,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>ru.progrm-jarvis</groupId>
+            <artifactId>reflector</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
